--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
            name: xcarchive
-           path: reactNativeCiCd.xcarchive  
+           path: ios/reactNativeCiCd.xcarchive  
 
 
   build-android:
